<?xml version="1.0"?>
<package>
  <name>thormang3_action_script_player</name>
  <version>0.2.0</version>
  <description>
    This package provides a action script playing for thormang3.
    It can be used with thormang3_action_module and ros_mpg321_player.
  </description>
  <license>BSD</license>
  <author email="hjsong@robotis.com">Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC</url>
  <url type="website">http://wiki.ros.org/thormang3_action_script_player</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_action_module_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_action_module_msgs</build_depend>
</package>
