<?xml version="1.0"?>
<package>
  <name>thormang3_demo</name>
  <version>0.2.0</version>
  <description>

     A GUI program for controlling a THORMANG3.
     Initial posture, walking, manipulation, head control are available with this package.

  </description>

  <license>BSD</license>
  <author email="kmjung@robotis.com">kayman</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-OPC</url>
  <url type="website">http://wiki.ros.org/thormang3_demo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>thormang3_foot_step_generator</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_walking_module_msgs</build_depend>
  <build_depend>thormang3_manipulation_module_msgs</build_depend>
  <build_depend>thormang3_feet_ft_module_msgs</build_depend>
  <build_depend>humanoid_nav_msgs</build_depend>
  <build_depend>footstep_planner</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>thormang3_foot_step_generator</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>thormang3_walking_module_msgs</run_depend>
  <run_depend>thormang3_manipulation_module_msgs</run_depend>
  <run_depend>thormang3_feet_ft_module_msgs</run_depend>
  <run_depend>humanoid_nav_msgs</run_depend>
  <run_depend>footstep_planner</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
