<?xml version="1.0"?>
<package>
  <name>thormang3_foot_step_generator</name>
  <version>0.0.0</version>
  <description>The thormang3_foot_step_generator package</description>

  <maintainer email="hjsong@robotis.todo">ROBOTIS</maintainer>

  <license>BSD</license>

  <author email="hjsong@robotis.com">ROBOTIS</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_walking_module_msgs</build_depend>
    
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>  
  <run_depend>message_runtime</run_depend>

</package>