<?xml version="1.0"?>
<package>
  <name>thormang3_motion_script_player</name>
  <version>0.1.0</version>
  <description>The thormang3_motion_script_player package</description>

  <maintainer email="hjsong@robotis.com">robotis</maintainer>

  <license>GPLv2</license>

  <author email="hjsong@robotis.com">robotis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>thormang3_action_module_msgs</build_depend>
    
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>