<?xml version="1.0"?>
<package>
  <name>thormang3_navigation</name>
  <version>0.0.1</version>
  <description>
    This package is for generating footsteps. 
    It has several config files and launch files in order to use footstep planner package. 
  </description>

  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <author email="kmjung@robotis.com">kayman</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>footstep_planner</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>octomap_server</build_depend>
  <run_depend>footstep_planner</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>octomap_server</run_depend>

  <export>

  </export>
</package>