<?xml version="1.0"?>
<package>
  <name>thormang3_offset_tuner_client</name>
  <version>0.1.0</version>
  <description>

     The GUI program that can adjust offset of THORMANG3. 
     It is used with the thormang3_offset_tuner_server.

  </description>
  <maintainer email="kmjung@robotis.com">kayman</maintainer>
  <author email="kmjung@robotis.com">kayman</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>thormang3_offset_tuner_msgs</build_depend>
  <build_depend>thormang3_foot_step_generator</build_depend>
  
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>

 
</package>
