<?xml version="1.0"?>
<package>
  <name>thormang3_rviz</name>
  <version>0.1.1</version>
  <description>The rviz_thor3 package</description>

  <maintainer email="platform@robotis.com">kayman</maintainer>
  <author>kayman</author>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
