<?xml version="1.0"?>
<package>
  <name>thormang3_test</name>
  <version>0.0.0</version>
  <description>The thormang3_test package</description>

  <author email="sch@robotis.com">sch</author>
  <maintainer email="sch@robotis.com">sch</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>thormang3_manipulation_module_msgs</build_depend>
  <build_depend>thormang3_foot_step_generator</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
