<package>
  <name>pcl_map_2d</name>
  <version>0.0.1</version>
  <description>

     pcl_map_2d

  </description>
  <author>Kayman</author>
  <maintainer email="kmjung@robotis.com">Kayman</maintainer>
  <license>BSD</license>
  
  <build_depend>nav_msgs</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>opencv2</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
